--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd apps/web && next build",
-  "outputDirectory": "apps/web/.next",
+  "buildCommand": "cd apps/web && npm run build",
+  "installCommand": "npm install -g npm@9.8.1 && npm install --workspaces=false --force",
   "framework": null,
-  "installCommand": "npm install --force"
+  "outputDirectory": "apps/web/.next"
 }
