--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./server": "./src/server.ts",
+    "./client": "./src/client.ts"
+  },
   "scripts": {
     "typecheck": "tsc --noEmit",
     "generate": "supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/types.ts"
