--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "postinstall": "cp package.vercel.json package.json"
   },
   "dependencies": {
-    "@postoko/auth": "workspace:*",
-    "@postoko/database": "workspace:*",
-    "@postoko/types": "workspace:*",
-    "@postoko/utils": "workspace:*",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -33,18 +30,29 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/stripe-js": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.12.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.5",
+    "googleapis": "^128.0.0",
+    "jose": "^5.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "openai": "^4.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.10.3",
+    "replicate": "^0.22.0",
+    "stripe": "^13.11.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
