fix: simplify Vercel deployment configuration and remove problematic scripts
- Remove root vercel.json in favor of simpler app-level config
- Remove postinstall script that was causing build issues
- Remove problematic redirects from next.config.js
- Simplify build commands for monorepo deployment

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "postinstall": "cp package.vercel.json package.json"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
