fix: add modules to workspaces and use workspace protocol for dependencies
- Add modules/* to workspaces in root package.json
- Use workspace:* protocol for internal dependencies
- Use turbo for building which handles monorepo dependencies properly

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,18 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@postoko/auth": "workspace:*",
+    "@postoko/billing": "workspace:*",
+    "@postoko/database": "workspace:*",
+    "@postoko/drive": "workspace:*",
+    "@postoko/settings": "workspace:*",
+    "@postoko/social": "workspace:*",
+    "@postoko/types": "workspace:*",
+    "@postoko/utils": "workspace:*",
+    "@postoko/queue": "workspace:*",
+    "@postoko/ai": "workspace:*",
+    "@postoko/analytics": "workspace:*",
+    "@postoko/notifications": "workspace:*",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
