fix: remove workspace protocol and non-existent modules
- Replace all workspace:* with * in package.json files
- Remove @postoko/analytics and @postoko/notifications as they don't exist yet
- Clean up node_modules for fresh install
- This should fix npm install in Vercel

--- a/modules/ai/package.json
+++ b/modules/ai/package.json
@@ -10,10 +10,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@postoko/database": "workspace:*",
-    "@postoko/types": "workspace:*",
-    "@postoko/utils": "workspace:*",
-    "@postoko/billing": "workspace:*",
+    "@postoko/database": "*",
+    "@postoko/types": "*",
+    "@postoko/utils": "*",
+    "@postoko/billing": "*",
     "openai": "^4.24.1",
     "sharp": "^0.33.1",
     "zod": "^3.22.4"
