--- a/modules/auth/package.json
+++ b/modules/auth/package.json
@@ -9,9 +9,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@postoko/database": "workspace:*",
-    "@postoko/types": "workspace:*",
-    "@postoko/utils": "workspace:*",
+    "@postoko/database": "*",
+    "@postoko/types": "*",
+    "@postoko/utils": "*",
     "@supabase/supabase-js": "^2.39.0",
     "next": "14.0.4",
     "react": "^18.2.0"
