--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,18 +12,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@postoko/auth": "workspace:*",
-    "@postoko/billing": "workspace:*",
-    "@postoko/database": "workspace:*",
-    "@postoko/drive": "workspace:*",
-    "@postoko/settings": "workspace:*",
-    "@postoko/social": "workspace:*",
-    "@postoko/types": "workspace:*",
-    "@postoko/utils": "workspace:*",
-    "@postoko/queue": "workspace:*",
-    "@postoko/ai": "workspace:*",
-    "@postoko/analytics": "workspace:*",
-    "@postoko/notifications": "workspace:*",
+    "@postoko/auth": "*",
+    "@postoko/billing": "*",
+    "@postoko/database": "*",
+    "@postoko/drive": "*",
+    "@postoko/settings": "*",
+    "@postoko/social": "*",
+    "@postoko/types": "*",
+    "@postoko/utils": "*",
+    "@postoko/queue": "*",
+    "@postoko/ai": "*",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
