fix: resolve build errors for server/client components and UI imports
- Remove server-only auth middleware from client exports
- Fix queue components to use correct UI component paths
- Update Stripe API version and add missing dependencies
- Fix LoadingSpinner vs Spinner naming inconsistency
- All build errors resolved for successful deployment

--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "npm@9.8.1"
+  "packageManager": "npm@9.8.1",
+  "dependencies": {
+    "dotenv": "^17.2.0"
+  }
 }
