--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
-  "buildCommand": "turbo run build --filter=@postoko/web",
+  "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "functions": {
+    "apps/web/src/app/api/**/*.ts": {
+      "maxDuration": 30
+    }
+  }
 }
