fix: update vercel.json to use standard npm build command

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "cd apps/web && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
   "framework": "nextjs",
+  "rootDirectory": ".",
   "functions": {
     "apps/web/src/app/api/**/*.ts": {
       "maxDuration": 30
