--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,17 +12,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@postoko/ai": "*",
     "@postoko/auth": "*",
     "@postoko/billing": "*",
     "@postoko/database": "*",
     "@postoko/drive": "*",
+    "@postoko/queue": "*",
     "@postoko/settings": "*",
     "@postoko/social": "*",
     "@postoko/types": "*",
     "@postoko/utils": "*",
-    "@postoko/queue": "*",
-    "@postoko/ai": "*",
-    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -54,10 +54,10 @@
     "jose": "^5.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^15.4.1",
     "openai": "^4.24.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.10.3",
     "replicate": "^0.22.0",
@@ -74,10 +74,10 @@
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.16",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^15.4.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.32",
