fix: update vercel.json configuration for proper Next.js monorepo deployment
- Set correct outputDirectory to apps/web/.next
- Add devCommand for local development
- Add ignoreCommand for turbo-aware cache
- Fix routes-manifest.json path issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
+  "framework": "nextjs",
+  "installCommand": "npm install",
   "buildCommand": "turbo run build --filter=@postoko/web",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "npm install",
-  "framework": "nextjs"
+  "devCommand": "turbo run dev --filter=@postoko/web",
+  "ignoreCommand": "npx turbo-ignore"
 }
